--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,9 +14,18 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.2",
     "express": "^4.18.3",
-    "helmet": "^7.1.0",
     "http": "^0.0.1-security",
     "jest": "^29.7.0",
     "pino-http": "^9.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.24.3",
+    "@babel/preset-env": "^7.24.3",
+    "babel-jest": "^29.7.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    }
   }
 }
