--- a/Backend/package.json
+++ b/Backend/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
+    "@babel/plugin-proposal-private-property-in-object": "^7.24.3",
     "babel-jest": "^29.7.0"
   },
   "jest": {
