--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,12 +16,13 @@
     "express": "^4.18.3",
     "http": "^0.0.1-security",
     "jest": "^29.7.0",
-    "pino-http": "^9.0.0"
+    "pino-http": "^9.0.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.3",
     "@babel/preset-env": "^7.24.3",
-    "@babel/plugin-proposal-private-property-in-object": "^7.24.3",
     "babel-jest": "^29.7.0"
   },
   "jest": {
